login & register basically done, also added api key to connect to spoonacular so that works as well.
