# dist/openapi.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.0
 info:
-  title: Recipes api
+  title: Recipes Web API
   description: API for recipes project
   version: 1.0.1
 servers:
@@ -12,7 +12,7 @@ servers:
 tags:
   - name: Auth
     description: All authentication related routes
-  - name: Users
+  - name: User
     description: All the user's personal app info
   - name: Recipes
     description: All reciepes general info
@@ -24,7 +24,7 @@ paths:
       summary: A new user from the client is added to the server
       description: A JSON object contains all the details about the new user.
       requestBody:
-        description: Inventory item to add
+        description: User's details
         content:
           application/json:
             schema:
@@ -34,7 +34,9 @@ paths:
         "201":
           description: A new user has been added
         "400":
-          description: wrong input parameters
+          description: Wrong input parameters
+        "409":
+          description: Username taken
   /login:
     post:
       tags:
@@ -58,6 +60,8 @@ paths:
               schema:
                 type: string
                 example: session=87s97sdhgf279293f8w0e9
+        "400":
+          desciption: User already logged in
         "401":
           description: Authentication failed
   /logout:
@@ -68,10 +72,10 @@ paths:
       responses:
         "200":
           description: "the user has ben successfully logged out"
-  /users/favorites:
+  /user/favorites:
     get:
       tags:
-        - Users
+        - User
       summary: Return the favorite recipes that were saved by user
       description: Get an array of recipes that were saved by a specific user
       responses:
@@ -89,7 +93,7 @@ paths:
         - cookieAuth: []
     post:
       tags:
-        - Users
+        - User
       summary: save recipe in the favorites list of a user
       description: save recipe in the favorites list of a user
       requestBody:
@@ -163,6 +167,13 @@ components:
           description:
             password conatins between 5 to 10 chars, at least one of them
             is a number and a special char
+          format: password
+          example: my_name@12
+        password_confirm:
+          maxLength: 10
+          minLength: 5
+          type: string
+          description: password confirmation
           format: password
           example: my_name@12
         email:
