# routes/auth.js
@@ -3,6 +3,48 @@ var router = express.Router();
 const MySql = require("../routes/utils/MySql");
 const DButils = require("../routes/utils/DButils");
 const bcrypt = require("bcrypt");
+const { check } = require("express-validator");
+
+// list of viable countries
+const countries = require("./utils/countries.json").map((country) => {
+  return {
+    name: country.name.common,
+  };
+});
+
+async function checkUsername(username) {
+  regex = /[^A-Za-z]/; // username can only contain letters
+
+  if (username.length < 3 || username.length > 8) {
+    throw { status: 400, message: "Username must be between 3 and 8 characters" };
+  }
+  if (regex.test(username)) {
+    throw { status: 400, message: "Username can only contain letters" };
+  }
+}
+
+async function checkPassword(password) {
+  regex = /^(?=.*\d)(?=.*[^A-Za-z0-9]).+$/ // password must contain at least one digit and one special character
+
+  if (password.length < 5 || password.length > 10) {
+    throw { status: 400, message: "Password must be between 5 and 10 characters" };
+  }
+  if (!regex.test(password)) {
+    throw { status: 400, message: "Password must contain at least one digit and one special character" };
+  }
+}
+
+async function checkPasswordsMatch(password, password_confirm) {
+  if (password !== password_confirm) {
+    throw { status: 400, message: "Passwords do not match" };
+  }
+}
+
+async function checkCountry(country) {
+  if (!countries.find((x) => x.name === country)) {
+    throw { status: 400, message: "Country is not valid" };
+  }
+}
 
 router.post("/register", async (req, res, next) => {
   try {
@@ -15,12 +57,22 @@ router.post("/register", async (req, res, next) => {
       lastname: req.body.lastname,
       country: req.body.country,
       password: req.body.password,
+      password_confirm: req.body.password_confirm,
       email: req.body.email,
       profilePic: req.body.profilePic
     }
     let users = [];
     users = await DButils.execQuery("SELECT username from users");
 
+    // check that username is valid
+    await checkUsername(user_details.username);
+
+    await checkPassword(user_details.password); // check that password is valid
+    await checkPasswordsMatch(user_details.password, user_details.password_confirm); // check that passwords match
+
+    await checkCountry(user_details.country); // check that country is valid
+
+    // Check that username is not taken
     if (users.find((x) => x.username === user_details.username))
       throw { status: 409, message: "Username taken" };
 
@@ -34,7 +86,8 @@ router.post("/register", async (req, res, next) => {
       `INSERT INTO users (username, firstname, lastname, country, password, email, profilePic) VALUES ('${user_details.username}', '${user_details.firstname}', '${user_details.lastname}',
       '${user_details.country}', '${hash_password}', '${user_details.email}', '${user_details.profilePic}')`
     );
-    res.status(201).send({ message: "user created", success: true });
+
+    res.status(201).send({ message: "User created", success: true });
   } catch (error) {
     next(error);
   }
@@ -58,21 +111,28 @@ router.post("/login", async (req, res, next) => {
       throw { status: 401, message: "Username or Password incorrect" };
     }
 
+    // check if user is already logged in
+    if (req.session.user_id) {
+      throw {status: 400, message: "User already logged in" };
+    }
+
     // Set cookie
     req.session.user_id = user.user_id;
     console.log("session user_id login: " + req.session.user_id);
 
     // return cookie
-    res.status(200).send({ message: "login succeeded " , success: true });
+    res.status(200).send({ message: "login success" , success: true });
   } catch (error) {
     next(error);
   }
 });
 
+
 router.post("/logout", function (req, res) {
   console.log("session user_id Logout: " + req.session.user_id);
   req.session.reset(); // reset the session info --> send cookie when  req.session == undefined!!
-  res.send({ success: true, message: "logout succeeded" });
+  res.status(200).send({ message: "logout success", success: true});
 });
+
 
 module.exports = router;
